--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
                 >
                     <img
                         class="w-10 aspect-square rounded-xl"
-                        src="https://ssl.gstatic.com/images/branding/product/2x/hh_drive_36dp.png"
+                        src="https://open.spotify.com/favicon.ico"
                     />
                 </div>
 
                 <div>
-                    <div>Google Drive</div>
-                    <div class="text-[#ffffff49]">drive.google.com</div>
+                    <div>Spotify</div>
+                    <div class="text-[#ffffff49]">open.spotify.com</div>
                 </div>
             </a>
             <a
