updating spotify a href

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <a
                 target="_blank"
                 class="flex p-2 justify-start rounded gap-2 items-center bg-[#2e2c35] cursor-pointer transition-all ease-in-out duration-100 no-underline text-white hover:bg-[#393642]"
-                href="https://www.drive.google.com"
+                href="https://open.spotify.com/"
             >
                 <div
                     class="grid place-items-center p-1 border-2 border-solid border-[#ffffff49] rounded-2xl"
