changed default to 24 hour format

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                     name="24hr-toggle"
                     id="24hr-toggle"
                     class="hover peer h-0 w-0 scale-0 opacity-0"
+                    checked
                 />
 
                 <label
