updated clock appearance

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
 
             <div
-                class="px-10 py-3 border-solid border-2 border-gray-700 w-fit grid place-items-center grid-cols-9 transition-all duration-200 ease-in-out mx-auto justify-center items-center gap-x-5 rounded-3xl bg-slate-950"
+                class="px-10 py-3 border-solid border-2 border-gray-700 w-4/5 grid place-items-center grid-cols-9 transition-all duration-200 ease-in-out mx-auto justify-center items-center gap-x-5 rounded-3xl bg-slate-950"
             >
                 <canvas id="clock" class="col-span-3"></canvas>
 
