dynamic time format on startup

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         id="hours"
                         data-hour-24="00"
                         data-hour-12="12"
-                        class="h-[70px] overflow-hidden text-transparent flex justify-center items-center relative before:content-[attr(data-hour-12)] before:transition-all before:duration-500 before:ease-in-out before:text-transparent before:absolute before:top-0 before:left-0 before:w-20 before:bg-gradient-to-b before:from-blue-400 before:to-blue-600 before:bg-clip-text after:content-[attr(data-hour-24)] after:transition-all after:duration-500 after:ease-in-out after:text-transparent after:absolute after:top-0 after:left-0 after:translate-y-20 after:w-20 after:bg-gradient-to-b after:from-blue-400 after:to-blue-600 after:bg-clip-text w-20 mx-3 font-semibold text-7xl"
+                        class="h-[70px] overflow-hidden text-transparent flex justify-center items-center relative before:content-[attr(data-hour-12)] before:transition-all before:duration-500 before:ease-in-out before:text-transparent before:absolute before:top-0 before:left-0 before:w-20 before:bg-gradient-to-b before:from-blue-400 before:to-blue-600 before:bg-clip-text after:content-[attr(data-hour-24)] before:-translate-y-20 after:transition-all after:duration-500 after:ease-in-out after:text-transparent after:absolute after:top-0 after:left-0 after:translate-y-20 after:w-20 after:bg-gradient-to-b after:from-blue-400 after:to-blue-600 after:bg-clip-text w-20 mx-3 font-semibold text-7xl"
                         >00</span
                     >:
                     <span
