added more shortcuts

--- a/index.html
+++ b/index.html
@@ -288,6 +288,82 @@
                         <div class="text-secondary">notion.so</div>
                     </div>
                 </a>
+                <a
+                    target="_blank"
+                    class="flex p-2 justify-start rounded gap-2 items-center bg-light-grey cursor-pointer transition-all ease-in-out duration-100 no-underline text-primary hover:bg-light-grey-hover"
+                    href="https://www.meet.google.com/"
+                >
+                    <div
+                        class="grid place-items-center p-1 border-2 border-solid border-secondary rounded-2xl"
+                    >
+                        <img
+                            class="w-10 aspect-square rounded-xl object-contain bg-contain"
+                            src="./img/google meet.png"
+                        />
+                    </div>
+
+                    <div>
+                        <div>Google Meet</div>
+                        <div class="text-secondary">meet.google.com</div>
+                    </div>
+                </a>
+                <a
+                    target="_blank"
+                    class="flex p-2 justify-start rounded gap-2 items-center bg-light-grey cursor-pointer transition-all ease-in-out duration-100 no-underline text-primary hover:bg-light-grey-hover"
+                    href="https://cloudconvert.org/"
+                >
+                    <div
+                        class="grid place-items-center p-1 border-2 border-solid border-secondary rounded-2xl"
+                    >
+                        <img
+                            class="w-10 aspect-square rounded-xl"
+                            src="./img/cloudconvert.png"
+                        />
+                    </div>
+
+                    <div>
+                        <div>CloudConvert</div>
+                        <div class="text-secondary">cloudconvert.com</div>
+                    </div>
+                </a>
+                <a
+                    target="_blank"
+                    class="flex p-2 justify-start rounded gap-2 items-center bg-light-grey cursor-pointer transition-all ease-in-out duration-100 no-underline text-primary hover:bg-light-grey-hover"
+                    href="https://www.netlify.com/"
+                >
+                    <div
+                        class="grid place-items-center p-1 border-2 border-solid border-secondary rounded-2xl"
+                    >
+                        <img
+                            class="w-10 aspect-square rounded-xl"
+                            src="./img/netlify.png"
+                        />
+                    </div>
+
+                    <div>
+                        <div>Netlify</div>
+                        <div class="text-secondary">netlify.com</div>
+                    </div>
+                </a>
+                <a
+                    target="_blank"
+                    class="flex p-2 justify-start rounded gap-2 items-center bg-light-grey cursor-pointer transition-all ease-in-out duration-100 no-underline text-primary hover:bg-light-grey-hover"
+                    href="https://www.stackoverflow.com/"
+                >
+                    <div
+                        class="grid place-items-center p-1 border-2 border-solid border-secondary rounded-2xl"
+                    >
+                        <img
+                            class="w-10 aspect-square rounded-xl"
+                            src="./img/stackoverflow.png"
+                        />
+                    </div>
+
+                    <div>
+                        <div>Stack Overflow</div>
+                        <div class="text-secondary">stackoverflow.com</div>
+                    </div>
+                </a>
             </div>
         </div>
 
