fixed google meet link

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <a
                     target="_blank"
                     class="flex p-2 justify-start rounded gap-2 items-center bg-light-grey cursor-pointer transition-all ease-in-out duration-100 no-underline text-primary hover:bg-light-grey-hover"
-                    href="https://www.meet.google.com/"
+                    href="https://meet.google.com/"
                 >
                     <div
                         class="grid place-items-center p-1 border-2 border-solid border-secondary rounded-2xl"
