--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                         <label
                             for="url-toggle"
-                            class="uppercase cursor-pointer text-primary select-none relative font-[Montserrat] before:absolute before:-left-[0.625rem] before:top-[0.0625rem] before:h-10 before:w-20 before:rounded-xl before:bg-slate-700 before:border-2 before:border-solid before:border-slate-800 after:absolute after:-left-[0.25rem] after:top-[7px] after:h-7 after:w-8 after:rounded-lg after:bg-red-500 after:transition-all after:duration-300 after:ease-in-out peer-checked:after:bg-green-500 peer-checked:after:left-0 peer-checked:after:translate-x-full"
+                            class="uppercase right-1 cursor-pointer text-primary select-none relative font-[Montserrat] before:absolute before:-left-[0.625rem] before:top-[0.0625rem] before:h-10 before:w-20 before:rounded-xl before:bg-slate-700 before:border-2 before:border-solid before:border-slate-800 after:absolute after:-left-[0.25rem] after:top-[7px] after:h-7 after:w-8 after:rounded-lg after:bg-red-500 after:transition-all after:duration-300 after:ease-in-out peer-checked:after:bg-green-500 peer-checked:after:left-0 peer-checked:after:translate-x-full"
                         ></label>
                     </div>
                 </div>
